// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MapCard /> test if MapCard renders properly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FBFBFB",
        "borderRadius": 17,
        "height": 150,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "alignContent": "center",
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "url": undefined,
          }
        }
        style={
          Object {
            "borderRadius": 100,
            "height": 55,
            "margin": 20,
            "width": 55,
          }
        }
      />
      <View
        style={
          Object {
            "marginTop": 25,
          }
        }
      >
        <Text
          style={
            Object {
              "fontFamily": "poppins-medium",
              "fontSize": 15,
            }
          }
        >
          Kim Berguoni
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "poppins-light",
              "fontSize": 10,
            }
          }
        >
          Window cleaner
        </Text>
        <Text
          style={
            Object {
              "fontFamily": "poppins-light",
              "fontSize": 10,
            }
          }
        >
          CleanWindows Ltd.
        </Text>
      </View>
    </View>
    <Text
      style={
        Object {
          "fontFamily": "poppins-light",
          "fontSize": 10,
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod ...
    </Text>
  </View>
</View>
`;

exports[`<MapCard /> test if empty MapCard will render null 1`] = `null`;

exports[`<MarkerComponent /> snapshot of component 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 0.12123231,
      "longitude": 0.002331232,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "height": 50,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "borderRadius": 50,
          "height": 30,
          "marginLeft": 3,
          "marginTop": 7,
          "position": "absolute",
          "resizeMode": "contain",
          "width": 30,
          "zIndex": 99,
        }
      }
    />
    <Image
      source={1}
      style={
        Object {
          "aspectRatio": 1,
          "height": 45,
          "resizeMode": "contain",
        }
      }
    />
  </View>
</AIRMapMarker>
`;

exports[`<MarkerComponent /> snapshots of all variations of <MapPinComponent /> used in <MarkerComponent /> 1`] = `
<View
  style={
    Object {
      "height": 50,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "borderRadius": 50,
        "height": 30,
        "marginLeft": 3,
        "marginTop": 7,
        "position": "absolute",
        "resizeMode": "contain",
        "width": 30,
        "zIndex": 99,
      }
    }
  />
  <Image
    source={1}
    style={
      Object {
        "aspectRatio": 1,
        "height": 45,
        "resizeMode": "contain",
      }
    }
  />
</View>
`;

exports[`<MarkerComponent /> snapshots of all variations of <MapPinComponent /> used in <MarkerComponent /> 2`] = `
<View
  style={
    Object {
      "height": 50,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "borderRadius": 50,
        "height": 30,
        "marginLeft": 3,
        "marginTop": 7,
        "position": "absolute",
        "resizeMode": "contain",
        "width": 30,
        "zIndex": 99,
      }
    }
  />
  <Image
    source={1}
    style={
      Object {
        "aspectRatio": 1,
        "height": 45,
        "resizeMode": "contain",
      }
    }
  />
</View>
`;

exports[`<MarkerComponent /> snapshots of all variations of <MapPinComponent /> used in <MarkerComponent /> 3`] = `
<View
  style={
    Object {
      "height": 50,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "borderRadius": 50,
        "height": 30,
        "marginLeft": 3,
        "marginTop": 7,
        "position": "absolute",
        "resizeMode": "contain",
        "width": 30,
        "zIndex": 99,
      }
    }
  />
  <Image
    source={1}
    style={
      Object {
        "aspectRatio": 1,
        "height": 45,
        "resizeMode": "contain",
      }
    }
  />
</View>
`;

exports[`<MarkerComponent /> snapshots of all variations of <MapPinComponent /> used in <MarkerComponent /> 4`] = `
<View
  style={
    Object {
      "height": 50,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "borderRadius": 50,
        "height": 30,
        "marginLeft": 3,
        "marginTop": 7,
        "position": "absolute",
        "resizeMode": "contain",
        "width": 30,
        "zIndex": 99,
      }
    }
  />
  <Image
    source={1}
    style={
      Object {
        "aspectRatio": 1,
        "height": 45,
        "resizeMode": "contain",
      }
    }
  />
</View>
`;
